--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,33 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Танк</title>
+
+    <link href="assets/js/libs/bootstrap-toastr/toastr.min.css" rel="stylesheet">
+    <style>
+        #login_link{
+            position: absolute;
+            right:20px;
+            top:20px;
+        }
+    </style>
+
+
+    <script src="assets/js/libs/jquery/jquery-2.0.3.min.js" type="text/javascript"></script>
+    <script src="assets/js/plugins/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <!--<script src="assets/js/delivery.js"></script>-->
+    <!--<script src="assets/js/uploadFiles.js"></script>-->
+    <script src="assets/js/socketClient.js"></script>
+
+
+
+    <script src="metronic/admin/template_content/assets/plugins/bootstrap-toastr/toastr.js"></script>
+
+    <script src="assets/js/tank/index.js"></script>
+
 </head>
 <body>
+    <a href="login.html" id="login_link">вход</a>
     <h1>Параметры:</h1>
 </body>
 </html>
